# apo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependencies.yml  release.yml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  source.rs
src/discovery/: inventory.rs  mod.rs
src/evidence/: mod.rs
src/git/: mod.rs
src/policy/: mod.rs
src/report/: json.rs  markdown.rs  mod.rs  names.rs  prompt.rs
src/rules/: collaboration.rs  delivery.rs  documentation.rs  local_dev.rs  mod.rs  security.rs  testing.rs
tests/: cli.rs  integration.rs
tests/fixtures/minimal/: README.md
