[package]
name = "apo"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "APO — Engineering Evidence Platform. Repository Hygiene analyzer."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/thanos/apo"
repository = "https://github.com/thanos/apo"
documentation = "https://docs.rs/apo"
keywords = ["engineering", "hygiene", "repository", "evidence", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "/baoulo/",
    "/.tool-versions",
    "/*-repository-hygiene.md",
    "/*-repository-hygiene.json",
    "/*-repository-hygiene-prompt.md",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gix = { version = "0.85", default-features = false, features = [
    "revision",
    "sha1",
] }
ignore = "0.4"
regex = "1"
rayon = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
    "serde",
] }
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "apo"
path = "src/main.rs"

[lib]
name = "apo"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
